tests/ui/const-generics/defaults/intermixed-lifetime.stderr
error: lifetime parameters must be declared prior to type and const parameters
  --> $DIR/intermixed-lifetime.rs:3:28
   |
LL | struct Foo<const N: usize, 'a, T = u32>(&'a (), T);
   |           -----------------^^---------- help: reorder the parameters: lifetimes, then consts and types: `<'a, const N: usize, T = u32>`

error: lifetime parameters must be declared prior to type and const parameters
  --> $DIR/intermixed-lifetime.rs:6:37
   |
LL | struct Bar<const N: usize, T = u32, 'a>(&'a (), T);
   |           --------------------------^^- help: reorder the parameters: lifetimes, then consts and types: `<'a, const N: usize, T = u32>`

error: aborting due to 2 previous errors

